--- a/html-css/learning-01/main.css
+++ b/html-css/learning-01/main.css
@@ -7,6 +7,13 @@ body{
     color: whitesmoke;
 }
 
+h1, h3 {
+    align-items: center;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    padding: 1;
+}
 /* make links keep the same color in all states */
 a,
 a:visited,
@@ -29,3 +36,41 @@ a:focus {
     margin-bottom: 1em;
 }
 
+img {
+    border: 5px solid rgb(255, 255, 255);
+    display: block;
+    margin: 1em auto;
+}
+
+table {
+    border: 1px solid rgb(90, 90, 90);
+    border-collapse: collapse;
+    width: 40%;
+    margin: 1em auto;
+}
+
+th, td {
+    border: 1px solid whitesmoke;
+    padding: 9px;
+    text-align: left;
+}
+
+caption {
+    caption-side: top;
+    text-align: center;
+    font-style: italic;
+    margin-top: 0.5em;
+    border: 1px solid rgb(90, 90, 90);
+}
+
+footer {
+    text-align: center;
+    font-size: 1em;
+    margin-top: 1em;
+}
+
+article {
+    text-align: center;
+    margin: 0 0%;
+    line-height: 1.6;
+}
